# recommend_system

./: .env-example  .gitignore  Dockerfile  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml
nginx/: nginx.conf
src/api/: app.py
src/notebooks/: metrics.ipynb
src/preprocessing/: preprocess.py
src/recommender/: collaborate_filtering.py  content_filtering.py  hybrid_filtering.py
src/tests/: fetch_recommendations.py  list_index.py  test_api.py
src/utils/: load_data.py  script.py
tests/: test_api.py
