[tool.poetry]
name = "recommendation-system"
version = "0.1.0"
description = ""
authors = ["Allan Rodrigo <allanrdg6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
tensorflow = "^2.17.0"
keras = "^3.5.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
scikit-surprise = "^1.1.4"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"
flask-cors = "^5.0.0"
prettyconf = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
